# Chat_app

./: .env  Cargo.toml  chat.db
migrations/: 20241214124215_init.sql
src/: chat.rs  db.rs  main.rs  message.rs  pages.rs  user.rs  websocket.rs  ws.js
static/: chat.html  create_chat.html  index.html  login.html  register.html  script.js
