[package]
name = "Chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
actix = "0.13"
actix-web-actors = "4.0"
actix-web = "4.9.0"
actix-rt = "2.5"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
tokio = { version = "1", features = ["full"] }
tera = "1.10"
actix-files = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
